src/test/ui/parser/attr-dangling-in-fn.stderr
error: expected statement after outer attribute
  --> $DIR/attr-dangling-in-fn.rs:17:1
   |
LL | }
   | ^

error: aborting due to previous error

